トップ画面にイベント情報登録｜ メール送信画面｜ イベントの変更｜ ユーザー登録を追加

--- a/NameListSample/changeevent.html
+++ b/NameListSample/changeevent.html
@@ -2,7 +2,7 @@
 <html lang="ja" xml:lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ホームページの名前を入れてください</title>
+<title>イベントの変更</title>
 <meta name="keywords" content="ホームページのキーワードを入れてください" />
 <meta name="description" content="ホームページの紹介文を入れてください" />
 <meta http-equiv="content-script-type" content="text/javascript" />
@@ -19,7 +19,7 @@
 
 		<div id="head">
 			<h1>キーワードをいれてください</h1>
-			<h2><a href="./">ホームページのタイトルを入れてください</a></h2>
+			<h2><a href="./">イベントの変更</a></h2>
 		</div>
 		<div id="head_menu">
 			<a href="./">HOME</a>｜
