--- a/NameListSample/トップ画面.html
+++ b/NameListSample/トップ画面.html
@@ -24,10 +24,10 @@
 		</div>
 		<div id="head_menu">
 			<a href="./">HOME</a>｜
-			<a href="contents01.html">コンテンツ1</a>｜
-			<a href="contents01.html">コンテンツ2</a>｜
-			<a href="contents01.html">コンテンツ3</a>｜
-			<a href="contents01.html">コンテンツ4</a>｜
+			<a href="entryevent.html">イベント情報登録</a>｜
+			<a href="sendmail.html">メール送信画面</a>｜
+			<a href="changeevent.html">イベントの変更</a>｜
+			<a href="entryuser.html">ユーザー登録</a>｜
 			<a href="contents01.html">メニューは増減が可能です</a>｜
 		</div>
 
