タイトル：つくしの子保育園イベントを追加

--- a/NameListSample/トップ画面.html
+++ b/NameListSample/トップ画面.html
@@ -20,7 +20,7 @@
 
 		<div id="head">
 			<h1>キーワードをいれてください</h1>
-			<h2><a href="./">ホームページのタイトルを入れてください</a></h2>
+			<h2><a href="./">つくしの子保育園イベント</a></h2>
 		</div>
 		<div id="head_menu">
 			<a href="./">HOME</a>｜
