イベント班のブランチを作成

--- a/NameListSample/entryevent.html
+++ b/NameListSample/entryevent.html
@@ -26,7 +26,7 @@
 			<a href="contents01.html">コンテンツ1</a>｜
 			<a href="contents01.html">コンテンツ2</a>｜
 			<a href="contents01.html">コンテンツ3</a>｜
-			<a href="contents01.html">コンテンツ4</a>｜
+			<a href="contents01.html">コテンツ4</a>｜
 			<a href="contents01.html">メニューは増減が可能です</a>｜
 		</div>
 
