--- a/NameListSample/メール.html
+++ b/NameListSample/メール.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class='header'><h1>送付先</h1></div>
+<p><button class="add-parent-btn">追加</button></p>
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter Email Address"/>
     <ul class='list parent-list'></ul>
@@ -14,11 +15,6 @@
 <script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="js/ParentService.js"></script>
-<!--
-<script>
-	alert("parent.js load done")
-</script>
--->
 <script src="js/app.js"></script>
 </body>
 </html>
