メール送信のイベントを選択したあとにほしのさんの作成した送付先htmlへ遷移する

--- a/NameListSample/sendmail.html
+++ b/NameListSample/sendmail.html
@@ -40,7 +40,7 @@
   </tfoot>
   <tbody>
    <tr>
-   <form method="post" action="sendmail_result.html">
+   <form method="post" action="mail.html">
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
@@ -49,7 +49,7 @@
     </form>
    </tr>
    <tr>
-    <form method="post" action="sendmail_result.html">
+    <form method="post" action="mail.html">
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
@@ -58,7 +58,7 @@
     </form>
    </tr>
    <tr>
-  <form method="post" action="sendmail_result.html">
+  <form method="post" action="mail.html">
     <td><p><input type="text" name="name"></p></td>    
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
@@ -67,7 +67,7 @@
     </form>
    </tr>
    <tr>
-    <form method="post" action="sendmail_result.html">
+   <form method="post" action="mail.html">
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
     <td><p><input type="text" name="name"></p></td>
@@ -106,7 +106,7 @@
   </tfoot>
   <tbody>
    <tr>
-   <form method="post" action="sendmail_result.html">
+   <form method="post" action="mail.html">
     <td><p><CENTER>バザー</CENTER></p></td>
     <td><p><CENTER>6月19日(日)</CENTER></p></td>
     <td><p><CENTER>○○小学校</CENTER></p></td>
@@ -115,7 +115,7 @@
     </form>
    </tr>
    <tr>
-    <form method="post" action="sendmail_result.html">
+    <form method="post" action="mail.html">
     <td><p><CENTER>つくしっ子まつり</CENTER></p></td>
     <td><p><CENTER>9月10日(土)</CENTER></p></td>
     <td><p><CENTER>○○小学校</CENTER></p></td>
@@ -124,7 +124,7 @@
     </form>
    </tr>
    <tr>
-   <form method="post" action="sendmail_result.html">
+   <form method="post" action="mail.html">
     <td><p><CENTER>運動会</CENTER></p></td>
     <td><p><CENTER>10月02日(日)</CENTER></p></td>
     <td><p><CENTER>○○小学校</CENTER></p></td>
