ChildServiceを作成、送付画面をテンプレートに対応

--- a/NameListSample/childpage.html
+++ b/NameListSample/childpage.html
@@ -33,11 +33,11 @@
 
 		<div id="contents">
 			<div class='search-view'>
-				<input class='search-key' type="search" placeholder="Enter Email Address"/>
-				<ul class='list parent-list'></ul>
+				<input class='search-key' type="search" placeholder="Enter parent id"/>
+				<ul class='list child-list'></ul>
 			</div>
 
-			<!--<script src="cordova.js"></script>-->
+			<script src="cordova.js"></script>
 			<script src="lib/jquery.js"></script>
 			<script src="js/ParentService.js"></script>
 			<script src="js/ChildService.js"></script>
