--- a/NameListSample/トップ画面.html
+++ b/NameListSample/トップ画面.html
@@ -20,7 +20,7 @@
 
 		<div id="head">
 			<h1>キーワードをいれてください</h1>
-			<h2><a href="./">つくしの子保育園イベント</a></h2>
+			<h2><a href="./">つくしの子保育園</a></h2>
 		</div>
 		<div id="head_menu">
 			<a href="./">HOME</a>｜
@@ -35,40 +35,67 @@
 
 			<div id="top">
 
-				<h3>ようこそpop-02へ</h3>
+				<h3>つくしの子保育園イベント情報</h3>
 
-				<h4>レイアウトパターンを組み合わせていろいろなレイアウトをよりかんたんに</h4>
+				<h4>そつえんじのみなさんへ</h4>
 
-				<h5>■パターンA</h5>
+				<h5>■最新情報</h5>
 
 				<div class="typeA">
-					<p>テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
+					<p>学校のうんどう会も終わって、まいにち、べんきょう、、スポーツ、あそびと、がんばっていることと思います。
+					<br/>
+					つくしの子では、水や、どろんこあそびをまいにち元気に、楽しんでいます。
+					<br/>
+					まい年やっている、つくしの子バザーがあるので、お友だちを誘ってぜひあそびにいきませんか？待っています。
 					</p>
 				</div>
 
-				<h4>インフォメーション</h4>
+				<h4>イベントのインフォメーション</h4>
 
 				<div id="info">
-					<h5>2009/01/18</h5>
-					<p>検索エンジン対策としてキーワードを入力できるようにしました。</p>
-					<p>行間・フォントサイズ・フォントを変更しました。</p>
-					<h5>2008/05/01</h5>
-					<p>テンプレートリリースしました！！</p>
+					<h5>2016/05/●●</h5>
+					<p>運動会</p>
+					<p>場所：●●小学校</p>
+					<p>説明文：テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト</p>
+
+
+					<h5>2016/06/19</h5>
+					<p>バザー</p>
+					<p>場所：●●小学校</p>
+					<p>説明文：テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト</p>
+
+					<h5>2016/09/10</h5>
+					<p>つくしっ子まつり</p>
+					<p>場所：●●小学校</p>
+					<p>説明文：テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト</p>
+
+					<h5>2016/10/02</h5>
+					<p>運動会</p>
+					<p>場所：●●小学校</p>
+					<p>説明文：テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト</p>
 				</div>
 
-				<h4>横並びのレイアウトもかんたん</h4>
+				<h4>つくしの子保育園</h4>
 
-				<h5>パターンB</h5>
+				<h5>インフォメーション</h5>
 
 				<div class="typeB">
 					<div class="left">
-						<p>テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
+						<!--<p>テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
 						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
 						</p>
+						-->
+						<p>函館市●●-●●-●<br />
+						TEL:0138-●●-●●●●<br />
+						ホームペジ：http://www.tukusinoko.com/6_year/<br />
+						ブログ：http://tsukushinoko.seesaa.net/</p>
+
+
+
+
 					</div>
 					<div class="right">
-						<p><img src="assets/img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
+						<p><img src="assets/img/common/tamaire.gif" alt="サンプル画像" width="300" height="104" /></p>
 					</div>
 				</div>
 
