--- a/NameListSample/メール.html
+++ b/NameListSample/メール.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-<div class='header'><h1>送付先</h1></div>
-<p><button class="add-parent-btn">追加</button></p>
+<div class='header'><h1>保護者表示サンプル</h1></div>
+<p><button class="dataInit-btn">データ初期化</button></p>
+<p><button class="add-parent-btn">保護者追加</button></p>
 <div class='search-view'>
     <input class='search-key' type="search" placeholder="Enter Email Address"/>
     <ul class='list parent-list'></ul>
 </div>
-
 <script src="cordova.js"></script>
 <script src="lib/jquery.js"></script>
 <script src="js/ParentService.js"></script>
