ChildServiceをParentServiceと同様の構造にした。appChidも対応して直した。

--- a/NameListSample/childpage.html
+++ b/NameListSample/childpage.html
@@ -33,6 +33,7 @@
 
 		<div id="contents">
 
+			<p><button class="ChildInit-btn">データ初期化</button></p>
 			<div class='search-view'>
 				<input class='search-key' type="search" placeholder="Enter parent id"/>
 				<ul class='list children-list'></ul>
