TOP画面にイベント情報を表示させた

--- a/NameListSample/entryeventcheck.html
+++ b/NameListSample/entryeventcheck.html
@@ -43,7 +43,7 @@
 </tbody>
 </table>
 
-<p class="button"><input type="submit" value="entryeventcheck.html" ></p>
+<p class="button"><input type="submit" value="入力内容の確認画面へ" ></p>
 <input type="button" value="ストレージに保存" onClick="set()"> 
 
 <div id="show_result"></div>
