1つのイベントのみTOP画面に反映できるようになった

--- a/NameListSample/entryevent.html
+++ b/NameListSample/entryevent.html
@@ -10,7 +10,7 @@
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="imagetoolbar" content="no" />
 <!-- 外部CSS読み込み -->
-<link href="assets/css/default2.css" rel="stylesheet" type="text/css" />
+<link href="assets/css/entryevent.css" rel="stylesheet" type="text/css" />
 <!-- /ここまで -->
 
 </head>
@@ -31,8 +31,6 @@
 			<a href="contents01.html">コンテンツ4</a>｜
 			
 		</div>
-
-
 			
 			<form method="post" action="#" class="contact" id="id_form1">
 
@@ -69,8 +67,8 @@
 </tbody>
 </table>
 
-<p class="button"><input type="submit" value="入力内容の確認画面へ" ></p>
-<input type="button" value="ストレージに保存" onClick="set()"> 
+<!--<p class="button"><input type="submit" value="入力内容の確認画面へ" ></p>-->
+<input type="button" value="ストレージに保存" onClick="art()"> 
 
 <div id="show_result"></div>
 
