アプリ起動できる

--- a/NameListSample/sendmail_result.html
+++ b/NameListSample/sendmail_result.html
@@ -84,7 +84,11 @@
     <p><CENTER>ききききききき</CENTER></p>
 
 
-    <p><input type="submit" value="確認"></p>
+    <!-- <p><input type="submit" value="確認"></p> -->
+
+
+<a href="mailto:info@example.com"><p><input type="submit" value="確認"></p></a>
+   
       
 
     </div><!-- contents end -->
