--- a/NameListSample/entryevent.html
+++ b/NameListSample/entryevent.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="ja" xml:lang="ja" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<script src="js/entryevent.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>イベント情報登録</title>
+<title>メール送信画面</title>
 <meta name="keywords" content="ホームページのキーワードを入れてください" />
 <meta name="description" content="ホームページの紹介文を入れてください" />
 <meta http-equiv="content-script-type" content="text/javascript" />
 <meta http-equiv="content-style-type" content="text/css" />
 <meta http-equiv="imagetoolbar" content="no" />
 <!-- 外部CSS読み込み -->
-<link href="css/default.css" rel="stylesheet" type="text/css" />
+<link href="assets/css/entryevent.css" rel="stylesheet" type="text/css" />
 <!-- /ここまで -->
+
 </head>
 
 <body>
@@ -18,96 +20,65 @@
 	<div id="container">
 
 		<div id="head">
-			<h1>キーワードをいれてください</h1>
-			<h2><a href="./">イベント情報登録</a></h2>
+			<!--<h1>キーワードをいれてください</h1>-->
+			<h2><a href="./">子供確認画面</a></h2>
 		</div>
 		<div id="head_menu">
-			<a href="./">HOME</a>｜
+			<a href="トップ画面.html">HOME</a>｜
 			<a href="contents01.html">コンテンツ1</a>｜
 			<a href="contents01.html">コンテンツ2</a>｜
 			<a href="contents01.html">コンテンツ3</a>｜
 			<a href="contents01.html">コンテンツ4</a>｜
-			<a href="contents01.html">メニューは増減が可能です</a>｜
+			
 		</div>
+			
+			<form method="post" action="#" class="contact" id="id_form1">
 
-		<div id="contents">
+<br>
+<p>　以下のフォームにイベント情報をご入力ください。</p>
+<br>
 
-			<h3>ようこそpop-02へ</h3>
-			<h4>レイアウトパターンを組み合わせていろいろなレイアウトをよりかんたんに</h4>
-			<h5>パターンA</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-			</div>
-			<h5>パターンA応用</h5>
-			<div class="typeA">
-				<p>
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-					テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-				</p>
-				<p><img src="img/common/sample_pic.gif" alt="サンプル" width="465" height="104" /></p>
-			</div>
-			<h4>横並びのレイアウトもかんたん</h4>
-			<h5>パターンB</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-			</div>
-			<h5>パターンB応用</h5>
-			<div class="typeB">
-				<div class="left">
-					<p><img src="img/common/sample_pic02.gif" alt="サンプル画像" width="300" height="104" /></p>
-				</div>
-				<div class="right">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-			</div>
-			<h5>パターンB応用2</h5>
-			<div class="typeB">
-				<div class="left">
-					<p>
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト<br />
-						テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト　テキスト
-					</p>
-				</div>
-				<div class="right">
-					<p>デザインされた表の挿入もかんたん</p>
-					<table id="tbl_setA" width="98%">
-						<tr>
-							<th>サイトA</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトB</th>
-							<td>★★★★</td>
-						</tr>
-						<tr>
-							<th>サイトC</th>
-							<td>★★★</td>
-						</tr>
-						<tr>
-							<th>サイトD</th>
-							<td>★★</td>
-						</tr>
-					</table>
-				</div>
-			</div>
+
+<table>
+<tbody>
+<tr>
+<th><label for="company">日時</label></th>
+<td class="required"></td>
+<td><input type="date" name="Edate" id="Date"><br></td>
+</tr>
+<tr>
+<th><label for="section">イベント名</label></th>
+<td class="required"></td>
+<td><input type="text" name="section" id="Ename" size="50"><br>
+</td>
+</tr>
+<tr>
+<th><label for="name">場所</label></th>
+<td class="required"></td>
+<td><input type="text" name="name" id="place" size="50"><br>
+</td>
+</tr>
+<tr>
+
+<th><label for="message">説明文</label></th>
+<td class="required"></td>
+<td><textarea name="message" id="Emessage" rows="5" cols="40"></textarea></td>
+</tr>
+</tbody>
+</table>
+
+<!--<p class="button"><input type="submit" value="入力内容の確認画面へ" ></p>-->
+<input type="button" value="ストレージに保存" onClick="art()"> 
+
+<div id="show_result"></div>
+
+</form>
+
+			<!--<script src="cordova.js"></script>-->
+			<script src="lib/jquery.js"></script>
+			<script src="js/ChildService.js"></script>
+			<script src="js/appChild.js"></script>
+		</div>
 
 		</div><!-- contents end -->
 	</div><!-- container end -->
