保護者のページからお子様情報の変更ページに遷移できるように変更

--- a/NameListSample/childpage.html
+++ b/NameListSample/childpage.html
@@ -20,7 +20,7 @@
 
 		<div id="head">
 			<!--<h1>キーワードをいれてください</h1>-->
-			<h2><a href="./">子供確認画面</a></h2>
+			<h2><a href="./">お子様情報確認・修正</a></h2>
 		</div>
 		<div id="head_menu">
 			<a href="トップ画面.html">HOME</a>｜
@@ -33,14 +33,17 @@
 
 		<div id="contents">
 
-			<p><button class="ChildInit-btn">データ初期化</button></p>
+			<p><button class="ChildInit-btn">お子様データ初期化</button></p>
 			<div class='search-view'>
 				<input class='search-key' type="search" placeholder="Enter parent id"/>
+				<br><br>
+				<ul class='text parent-info'></ul>
 				<ul class='list children-list'></ul>
 			</div>
 
 			<!--<script src="cordova.js"></script>-->
 			<script src="lib/jquery.js"></script>
+			<script src="js/ParentService.js"></script>
 			<script src="js/ChildService.js"></script>
 			<script src="js/appChild.js"></script>
 		</div>
