ホームペジをホームページに変更、URLの修正、headメニューのコメントアウト

--- a/NameListSample/TOP.html
+++ b/NameListSample/TOP.html
@@ -28,7 +28,7 @@
 			<a href="sendmail.html">メール送信画面</a>｜
 			<a href="changeevent.html">イベントの変更</a>｜
 			<a href="entryuser.html">名簿メンテナンス</a>｜
-			<a href="contents01.html">メニューは増減が可能です</a>｜
+			<!--<a href="contents01.html">メニューは増減が可能です</a>｜ -->
 		</div>
 
 		<div id="contents">
@@ -69,7 +69,7 @@
 						-->
 						<p>函館市●●-●●-●<br />
 						TEL:0138-●●-●●●●<br />
-						ホームペジ：http://www.tukusinoko.com/6_year/<br />
+						ホームページ：http://www.tukusinoko.com/<br />
 						ブログ：http://tsukushinoko.seesaa.net/</p>
 
 
